gitops/components/boutique-network/netpol-default-deny.yaml
# Default deny all ingress and egress for every pod in the environment.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  labels:
    app.kubernetes.io/part-of: online-boutique
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
